tests/ui/invalid_base_class.stderr
error[E0277]: pyclass `PyBool` cannot be subclassed
 --> tests/ui/invalid_base_class.rs:4:1
  |
4 | #[pyclass(extends=PyBool)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ required for `#[pyclass(extends=PyBool)]`
  |
  = help: the trait `PyClassBaseType` is not implemented for `PyBool`
  = note: `PyBool` must have `#[pyclass(subclass)]` to be eligible for subclassing
  = help: the following other types implement trait `PyClassBaseType`:
            PyAny
            PyArithmeticError
            PyAssertionError
            PyAttributeError
            PyBaseException
            PyBaseExceptionGroup
            PyBlockingIOError
            PyBrokenPipeError
          and $N others
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: pyclass `PyBool` cannot be subclassed
 --> tests/ui/invalid_base_class.rs:4:19
  |
4 | #[pyclass(extends=PyBool)]
  |                   ^^^^^^ required for `#[pyclass(extends=PyBool)]`
  |
  = help: the trait `PyClassBaseType` is not implemented for `PyBool`
  = note: `PyBool` must have `#[pyclass(subclass)]` to be eligible for subclassing
  = help: the following other types implement trait `PyClassBaseType`:
            PyAny
            PyArithmeticError
            PyAssertionError
            PyAttributeError
            PyBaseException
            PyBaseExceptionGroup
            PyBlockingIOError
            PyBrokenPipeError
          and $N others
note: required by a bound in `PyClassImpl::BaseType`
 --> src/impl_/pyclass.rs
  |
  |     type BaseType: PyTypeInfo + PyClassBaseType;
  |                                 ^^^^^^^^^^^^^^^ required by this bound in `PyClassImpl::BaseType`
